test/compile-fail/find-file/no-nested-module-file/expected.txt
error: couldn't read ./test/compile-fail/find-file/no-nested-module-file/a/b/c.rhdl: No such file or directory (os error 2)
  ┌─ ./test/compile-fail/find-file/no-nested-module-file/a/b/mod.rhdl:1:1
  │
1 │ mod c;
  │ ^^^^^^ declared here

